Supports org-mode

--- a/ansible-playbook/roles/textlint/tasks/main.yml
+++ b/ansible-playbook/roles/textlint/tasks/main.yml
@@ -22,6 +22,7 @@
     global: yes
   with_items:
     - textlint
+    - textlint-plugin-org
     - textlint-rule-preset-ja-technical-writing
     - textlint-rule-unexpanded-acronym
     - textlint-rule-rousseau
