--- a/ansible-playbook/roles/nvm/tasks/main.yml
+++ b/ansible-playbook/roles/nvm/tasks/main.yml
@@ -1,8 +1,11 @@
 - name: nvm
   shell: >
     curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
+  environment:
+    XDG_CONFIG_HOME: "{{ ansible_env.HOME }}/.config"
   args:
-    creates: "~/.config/nvm/nvm.sh"
+    executable: /bin/bash
+    creates: "{{ ansible_env.HOME }}/nvm/nvm.sh"
 
 - name: nodejs install
-  shell:  \. "${HOME}/.config/nvm/nvm.sh" && nvm install --lts --latest-npm && nvm alias default 'lts/*'
+  shell:  \. "{{ ansible_env.HOME }}/.config/nvm/nvm.sh" && nvm install --lts --latest-npm && nvm alias default 'lts/*'
