Disable cmd+w shortcut

--- a/ansible-playbook/roles/kitty/files/kitty.conf
+++ b/ansible-playbook/roles/kitty/files/kitty.conf
@@ -11,3 +11,6 @@ tab_bar_edge top
 tab_bar_style powerline
 tab_powerline_style angled
 tab_title_template " {index}: {'{: <501}'.format(title)}"
+
+# keyboard shortcut
+map cmd+w no_op
