--- a/ansible-playbook/roles/kitty/files/kitty.conf
+++ b/ansible-playbook/roles/kitty/files/kitty.conf
@@ -13,4 +13,10 @@ tab_powerline_style angled
 tab_title_template " {index}: {'{: <501}'.format(title)}"
 
 # keyboard shortcut
-map cmd+w no_op
+kitty_mod cmd
+map kitty_mod+w no_op
+map kitty_mod+d new_window
+
+macos_quit_when_last_window_closed yes
+
+enabled_layouts Grid
