--- a/ansible-playbook/roles/homebrew/tasks/main.yml
+++ b/ansible-playbook/roles/homebrew/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: Link .Brewfile
   file:
-    src: "{{ role_path }}/files/.Brewfile"
-    dest: ~/.Brewfile
+    src: "{{ role_path }}/files/homebrew"
+    dest: ~/.config/homebrew
     state: link
 
 - name: Install app
-  shell: brew bundle --global
+  shell: brew bundle
