--- a/ansible-playbook/roles/rust/tasks/common.yml
+++ b/ansible-playbook/roles/rust/tasks/common.yml
@@ -2,5 +2,5 @@
   include_vars: common.yml
 
 - name: install all common packages
-  shell: ~/.cargo/bin/rustup run stable cargo install {{ item }}
+  shell: ~/.local/share/cargo/bin/rustup run stable cargo install {{ item }}
   with_items: "{{ common.crates }}"
