--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -60,3 +60,4 @@ mas "Magnet", id: 441258766
 mas "Sequel Ace", id: 1518036000
 mas "GoodNotes", id: 1444383602
 mas "Dictonaries", id: 1380563956
+mas "Things 3", id: 904280696
