--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -19,7 +19,6 @@ brew "xz"
 brew "zlib"
 brew "git"
 brew "jq"
-brew "translate-shell"
 brew "mas"
 brew "tmux"
 brew "vim"
@@ -29,13 +28,13 @@ brew "python3"
 brew "pipx"
 brew "go"
 cask "alfred"
-cask "kitty"
 cask "discord"
 cask "notion"
 cask "zoom"
 cask "railwaycat/emacsmacport/emacs-mac"
 cask "google-chrome"
 cask "vlc"
+cask "amethyst"
 cask "stats"
 cask "anki"
 cask "font-cica"
