--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -27,11 +27,11 @@ brew "zsh"
 brew "python3"
 brew "pipx"
 brew "go"
+brew "emacs"
 cask "alfred"
 cask "discord"
 cask "notion"
 cask "zoom"
-cask "railwaycat/emacsmacport/emacs-mac"
 cask "google-chrome"
 cask "vlc"
 cask "amethyst"
@@ -50,12 +50,8 @@ mas "Spark", id: 1176895641
 mas "Slack", id: 803453959
 mas "The Unarchiver", id: 425424353
 mas "Enpass", id: 732710998
-mas "Keynote", id: 409183694
-mas "Numbers", id: 409203825
-mas "Pages", id: 409201541
 mas "TweetDeck", id: 485812721
 mas "RunCat", id: 1429033973
-mas "Magnet", id: 441258766
 mas "Sequel Ace", id: 1518036000
 mas "GoodNotes", id: 1444383602
 mas "Dictonaries", id: 1380563956
