--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -27,7 +27,8 @@ brew "zsh"
 brew "python3"
 brew "pipx"
 brew "go"
-brew "emacs"
+tap "d12frosted/emacs-plus"
+brew "emacs-plus@28", args: ["with-native-comp"]
 cask "alfred"
 cask "discord"
 cask "notion"
