--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -85,3 +85,4 @@ unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 bind g popup -w90% -h90% -d '#{pane_current_path}' -E lazygit
+bind o popup -w90% -h90%  -E $HOME/.local/bin/tmux_session.sh
