--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -3,8 +3,10 @@ tap "homebrew/core"
 tap "homebrew/cask-fonts"
 brew "curl"
 brew "coreutils"
+brew "findutils"
 brew "gawk"
 brew "gnu-sed"
+brew "grep"
 brew "duf"
 brew "tree"
 brew "cmigemo"
@@ -23,6 +25,7 @@ brew "mas"
 brew "tmux"
 brew "vim"
 brew "wget"
+brew "bash"
 brew "zsh"
 brew "python3"
 brew "pipx"
