--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -14,7 +14,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # 設定ファイルをリロードする
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
 # | でペインを縦に分割する
 bind | split-window -hc "#{pane_current_path}"
