--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -49,7 +49,7 @@ set-option -ga terminal-overrides ",xterm-24bits:Tc"
 if-shell "[ -n '${SSH_CONNECTION}' ]" "set-option -g status-style bg=cyan,fg=black"
 # アクティブなウィンドウのステータスラインを目立たせる
 setw -g window-status-current-style fg=terminal,bg=terminal
-# 処理を実行中のなウィンドウのステータスラインを目立たせる
+# 処理を実行中のウィンドウのステータスラインを目立たせる
 setw -g window-status-activity-style bg=colour229
 # 非アクティブウィンドウを白くする
 set -g window-active-style bg=terminal
@@ -64,9 +64,9 @@ set -g status-position top
 # ステータスバーを設定する
 ## 左パネルを設定する
 set -g status-left-length 40
-set -g status-left "【#S/#I/#P】"
+set -g status-left "[#H]【#S:#I-#P】"
 ## 右パネルを設定する
-set -g status-right "%Y/%m/%d（%a）%H:%M"
+set -g status-right "%Y/%m/%d(%a) %H:%M "
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 60
 ## ヴィジュアルノーティフィケーションを有効にする
