Change short host name

--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -64,7 +64,7 @@ set -g status-position top
 # ステータスバーを設定する
 ## 左パネルを設定する
 set -g status-left-length 40
-set -g status-left "[#H]【#S:#I-#P】"
+set -g status-left "[#h]【#S:#I-#P】"
 ## 右パネルを設定する
 set -g status-right "%Y/%m/%d(%a) %H:%M "
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
