--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -17,10 +17,10 @@ setw -g pane-base-index 1
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
 # | でペインを縦に分割する
-bind | split-window -hc "#{pane_current_path}"
+bind | split-window -hc
 
 # - でペインを横に分割する
-bind - split-window -vc "#{pane_current_path}"
+bind - split-window -vc
 
 set -g history-limit 100000
 
