Add yabai & skhd

--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -32,6 +32,9 @@ brew "pipx"
 brew "go"
 tap "d12frosted/emacs-plus"
 brew "emacs-plus@28", args: ["with-native-comp"]
+tap "koekeishiya/formulae"
+brew "yabai"
+brew "skhd"
 cask "alfred"
 cask "discord"
 cask "notion"
