--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -40,7 +40,7 @@ cask "discord"
 cask "notion"
 cask "zoom"
 cask "google-chrome"
-cask "obsidian"
+cask "google-drive"
 cask "vlc"
 cask "stats"
 cask "anki"
