--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -61,3 +61,4 @@ mas "Sequel Ace", id: 1518036000
 mas "GoodNotes", id: 1444383602
 mas "Dictonaries", id: 1380563956
 mas "Reeder 5", id: 1529448980
+mas "MeetingBar", id: 1532419400
