--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -29,6 +29,7 @@ brew "zsh"
 brew "python3"
 brew "pipx"
 brew "go"
+brew "hugo"
 tap "d12frosted/emacs-plus"
 brew "emacs-plus@28", args: ["with-native-comp"]
 tap "koekeishiya/formulae"
