--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -46,27 +46,13 @@ setw -g mouse
 set -g default-terminal "xterm-24bits"
 set-option -ga terminal-overrides ",xterm-24bits:Tc"
 
-if-shell "[ -n '${SSH_CONNECTION}' ]" "set-option -g status-style bg=cyan,fg=black"
-# アクティブなウィンドウのステータスラインを目立たせる
-setw -g window-status-current-style fg=terminal,bg=terminal
-# 処理を実行中のウィンドウのステータスラインを目立たせる
-setw -g window-status-activity-style bg=colour229
-# 非アクティブウィンドウを白くする
-set -g window-active-style bg=terminal
-set -g window-style bg=colour239
-
+# vim: set ft=tmux tw=0 nowrap:
 # ウィンドウを閉じた時に番号を詰める
 set-option -g renumber-windows on
 
 # ステータスバーを上部に表示
 set -g status-position top
 
-# ステータスバーを設定する
-## 左パネルを設定する
-set -g status-left-length 40
-set -g status-left "[#h]【#S:#I-#P】"
-## 右パネルを設定する
-set -g status-right "%Y/%m/%d(%a) %H:%M "
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 60
 ## ヴィジュアルノーティフィケーションを有効にする
@@ -86,3 +72,39 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespac
 
 bind g popup -w90% -h90% -d '#{pane_current_path}' -E lazygit
 bind o popup -w90% -h90%  -E $HOME/.local/bin/tmux_session.sh
+
+## COLORSCHEME: gruvbox dark (medium)
+set-option -g status "on"
+# default statusbar color
+set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+# default window title colors
+set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+# default window with an activity alert
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+# active window title colors
+set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+# pane border
+set-option -g pane-active-border-style fg=colour250 #fg2
+set-option -g pane-border-style fg=colour237 #bg1
+# message infos
+set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+# writing commands inactive
+set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+# pane number display
+set-option -g display-panes-active-colour colour250 #fg2
+set-option -g display-panes-colour colour237 #bg1
+# clock
+set-window-option -g clock-mode-colour colour109 #blue
+# bell
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
+set-option -g status-justify "left"
+set-option -g status-left-style none
+set-option -g status-left-length "80"
+set-option -g status-right-style none
+set-option -g status-right-length "80"
+set-window-option -g window-status-separator ""
+set-option -g status-left "#[bg=colour248,fg=colour237] #h#[bg=colour241,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
+set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M "
+set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
+set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
