--- a/files/i3-wm/i3/config
+++ b/files/i3-wm/i3/config
@@ -121,9 +121,14 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+set $ws_main "1: main"
+set $ws_contact "2: contact"
+set $ws_media "10: media"
+
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
+#bindsym $mod+1 workspace number $ws1
+bindsym $mod+1 workspace number $ws_main
+bindsym $mod+2 workspace number $ws_contact
 bindsym $mod+3 workspace number $ws3
 bindsym $mod+4 workspace number $ws4
 bindsym $mod+5 workspace number $ws5
@@ -131,11 +136,11 @@ bindsym $mod+6 workspace number $ws6
 bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+0 workspace number $ws_media
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+1 move container to workspace number $ws_main
+bindsym $mod+Shift+2 move container to workspace number $ws_contact
 bindsym $mod+Shift+3 move container to workspace number $ws3
 bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
@@ -143,11 +148,16 @@ bindsym $mod+Shift+6 move container to workspace number $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+0 move container to workspace number $ws_media
 
 # move to worspace
 bindsym Mod4+Prior workspace prev
 bindsym Mod4+Next workspace next
+
+
+workspace $ws_main output primary
+workspace $ws_contact output primary
+workspace $ws_media output eDP-1
 
 # screen lock
 bindsym $mod+Shift+x exec --no-startup-id light-locker-command -l
@@ -209,13 +219,13 @@ for_window [class="nextcloud"] floating enable
 exec --no-startup-id nextcloud
 for_window [class="enpass"] floating enable
 exec --no-startup-id enpass -minimize
-assign [class="Slack"] workspace 2
+assign [class="Slack"] workspace $ws_contact
 exec --no-startup-id slack
-assign [class="google-chrome-stable"] workspace 1
+assign [class="google-chrome-stable"] workspace $ws_main
 exec --no-startup-id google-chrome-stable
-assign [class="wezterm"] workspace 1
+assign [class="wezterm"] workspace $ws_main
 exec --no-startup-id wezterm
-assign [class="Emacs"] workspace 1
+assign [class="Emacs"] workspace $ws_main
 exec --no-startup-id Emacs
 
 # auto tiling
