--- a/files/i3-wm/i3blocks/config
+++ b/files/i3-wm/i3blocks/config
@@ -1,9 +1,42 @@
 separator_block_width=16
 
+[nm-vpn]
+#init_color=#FFFF00
+on_color=#bdae93
+command=~/.config/i3blocks/scripts/nm-vpn.sh
+label= 
+interval=30
+
+[cpu_usage]
+command=~/.config/i3blocks/scripts/cpu_usage.pl
+interval=30
+label=
+
 [load average]
-command=uptime | awk -F': ' '{print $2}'
-interval=5
+command=~/.config/i3blocks/scripts/load_average.sh
+interval=30
+label=LA:
+
+[memory]
+command=~/.config/i3blocks/scripts/memory.sh
+label= 
+interval=30
+
+[pacman-updates]
+command=~/.config/i3blocks/scripts/arch-update.py
+markup=pango
+interval= 3600
+QUIET=true
+#UPDATE_COLOR=#FFFF85
+AUR_YAY=true
+label= 
+
+[battery]
+command=~/.config/i3blocks/scripts/battery.py
+markup=pango
+interval=30
 
 [time]
-command=date '+%m/%d(%a) %H:%M'
-interval=1
+command=date '+%Y/%m/%d(%a) %H:%M'
+interval=60
+
