--- a/files/xremap/config.yml
+++ b/files/xremap/config.yml
@@ -2,6 +2,7 @@ modmap:
   - name: Global
     remap:
       CapsLock: Ctrl_L
+      kEY_102ND: KEY_GRAVE
   - name: wezterm
     application:
       only: wezterm
