--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .DS_Store
 *~
-.vim/dein/.cache/
-.vim/dein/cache_vim
-.vim/dein/repos/
-.vim/dein/state_vim.vim
+files/tmux/plugins
 !.gitkeep
 .zcompdump
 Brewfile.lock.json
