--- a/files/i3-wm/i3/config
+++ b/files/i3-wm/i3/config
@@ -23,9 +23,11 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-bindsym XF86MonBrightnessDown exec --no-startup-id ~/.local/bin/backlight.sh down
-bindsym XF86MonBrightnessUp exec --no-startup-id ~/.local/bin/backlight.sh up
+bindsym XF86MonBrightnessDown exec --no-startup-id ~/.config/i3/scripts/backlight.sh down
+bindsym XF86MonBrightnessUp exec --no-startup-id ~/.config/i3/scripts/backlight.sh up
 
+# window promoting
+bindsym $mod+p exec --no-startup-id ~/.config/i3/scripts/promote-window.py
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -203,6 +205,9 @@ gaps right 2
 gaps left 2
 gaps inner 2
 
+# auto tiling
+exec --no-startup-id ~/.config/i3/scripts/column-layout.py
+
 exec --no-startup-id "feh --no-fehbg --bg-fill ~/Nextcloud/Picture/wallpaper/forest_gruvbox.jpg"
 exec --no-startup-id "light-locker --lock-on-suspend"
 exec --no-startup-id xset r rate 200 25
@@ -227,9 +232,6 @@ assign [class="zoom"] workspace $ws_sub
 
 for_window [class="Google-chrome" title="YouTube Music"] move container to workspace number $ws_media
 for_window [class="Google-chrome" title="YouTube"] move container to workspace number $ws_media
-
-# auto tiling
-exec_always --no-startup-id autotiling
 
 # color
 set $bg #282828
