--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -6,8 +6,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'laktak/extrakto'
 set -g @extrakto_fzf_tool "~/.local/share/fzf/bin/fzf"
 set -g @extrakto_split_direction "v"
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark'
+set -g @plugin 'arcticicestudio/nord-tmux'
 
 # prefixキーをC-qに変更する
 set -g prefix C-q
@@ -85,5 +84,6 @@ bind o popup -w90% -h90%  -E $HOME/.local/bin/tmux_session.sh
 # tpm initlize
 run '~/.config/tmux/plugins/tpm/tpm'
 
-set-option -g status-left "#[bg=colour248,fg=colour237] #h#[bg=colour241,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246]#(~/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 1  -g 0)  %Y-%m-%d %H:%M "
+set-option -g status-right-length 60
+set-option -g status-left "#[fg=black,bg=cyan,bold] #H #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
+set-option -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(~/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 1  -g 0) #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %Y-%m-%d %H:%M "
