--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -53,8 +53,8 @@ bind -r L resize-pane -R 5
 setw -g mouse
 
 # 24bit color端末を使用する
-set -g default-terminal "xterm-24bits"
-set-option -ga terminal-overrides ",xterm-24bits:Tc"
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",$TERM:Tc"
 
 # vim: set ft=tmux tw=0 nowrap:
 # ウィンドウを閉じた時に番号を詰める
