--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -84,6 +84,7 @@ bind o popup -w90% -h90%  -E $HOME/.local/bin/tmux_session.sh
 # tpm initlize
 run '~/.config/tmux/plugins/tpm/tpm'
 
+set-option -g status-left-length 60
 set-option -g status-right-length 60
 set-option -g status-left "#[fg=black,bg=cyan,bold] #h #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
 set-option -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(~/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 1  -g 0) #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %Y-%m-%d %H:%M "
