--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -88,4 +88,4 @@ set-option -g status-left-length 60
 set-option -g status-right-length 60
 
 set-option -g status-left "#[fg=black,bg=cyan,bold] #h:#[fg=black,bg=cyan,nobold]#S #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(~/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 1  -g 0) #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %Y-%m-%d %H:%M "
+set-option -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(~/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 1  -g 0) "
