--- a/files/swaylock/config
+++ b/files/swaylock/config
@@ -1,22 +1,26 @@
-ignore-empty-password
-disable-caps-lock-text
-font=Cantarelle Regular
-#font-size=9
-
-effect-blur=7x5
-indicator
-indicator-radius=120
-indicator-thickness=20
-clock
-timestr=%I:%M %p
-datestr=%A, %d %B
-ring-color=4C566A
-key-hl-color=A3BE8C
-line-color=2E3440
-separator-color=3B4252
-inside-color=3B4252
-bs-hl-color=A3BE8C
-layout-bg-color=3B4252
-layout-border-color=4C566A
-layout-text-color=D8DEE9
-text-color=D8DEE9
+# nord theme
+color=2e3440ff
+show-failed-attempts
+show-keyboard-layout
+bs-hl-color=b48eadff
+caps-lock-bs-hl-color=d08770ff
+caps-lock-key-hl-color=ebcb8bff
+font=Fira Sans Light
+indicator-radius=100
+indicator-thickness=10
+inside-color=2e3440ff
+inside-clear-color=81a1c1ff
+inside-ver-color=5e81acff
+inside-wrong-color=bf616aff
+key-hl-color=a3be8cff
+layout-bg-color=2e3440ff
+line-uses-ring
+ring-color=3b4252ff
+ring-clear-color=88c0d0ff
+ring-ver-color=81a1c1ff
+ring-wrong-color=d08770ff
+separator-color=3b4252ff
+text-color=eceff4ff
+text-clear-color=3b4252ff
+text-ver-color=3b4252ff
+text-wrong-color=3b4252ff
