--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -63,20 +63,9 @@ set-option -g renumber-windows on
 # ステータスバーを上部に表示
 set -g status-position top
 
-## ヴィジュアルノーティフィケーションを有効にする
-setw -g monitor-activity on
-set -g visual-activity on
-
-# コピーモードを設定する
-## viのキーバインドを使用する
-#setw -g mode-keys vi
-## クリップボード共有を有効にする
-#set-option -g default-command ""
-## コピーモードの操作をvi風に設定する
-#bind-key -T copy-mode-vi v send-keys -X begin-selection
-#bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-#unbind -T copy-mode-vi Enter
-#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+## ヴィジュアルノーティフィケーションを無効にする
+setw -g monitor-activity off
+set -g visual-activity off
 
 bind g popup -w90% -h90% -d '#{pane_current_path}' -E lazygit
 bind o popup -w90% -h90%  -E $HOME/.local/bin/tmux_session.sh
