Add output conf

--- a/files/sway/config
+++ b/files/sway/config
@@ -18,6 +18,9 @@ font pango:monospace 12
 # output "*" bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 output "*" bg /usr/share/backgrounds/archlinux/small.png fill
 
+# output
+output eDP-1 scale 1
+
 # Custom keybindings
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +1%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -1%
