--- a/files/mako/config
+++ b/files/mako/config
@@ -1,8 +1,8 @@
 sort=-time
 layer=overlay
 background-color=#4c566a
-width=300
-height=110
+width=600
+height=220
 border-size=2
 border-color=#88c0d0
 border-radius=5
@@ -11,7 +11,7 @@ max-icon-size=64
 default-timeout=5000
 ignore-timeout=1
 padding=14
-font=Cica
+font=Cica 18
 margin=20
 
 [urgency=low]
