--- a/files/sway/config
+++ b/files/sway/config
@@ -135,20 +135,18 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 
-#
 # Workspaces:
-#
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
-set $ws8 "8"
 
-set $ws_main "1: main"
-set $ws_chat "2: chat"
-set $ws_mail "3: mail"
+set $ws_main  "1: main"
+set $ws_chat  "2: chat"
+set $ws_mail  "3: mail"
+set $ws_game  "8: game"
+set $ws_sub   "9: sub"
 set $ws_media "10: media"
-set $ws_sub "9: sub"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws_main
@@ -158,7 +156,7 @@ bindsym $mod+4 workspace number $ws4
 bindsym $mod+5 workspace number $ws5
 bindsym $mod+6 workspace number $ws6
 bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
+bindsym $mod+8 workspace number $ws_game
 bindsym $mod+9 workspace number $ws_sub
 bindsym $mod+0 workspace number $ws_media
 
@@ -170,7 +168,7 @@ bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+8 move container to workspace number $ws_game
 bindsym $mod+Shift+9 move container to workspace number $ws_sub
 bindsym $mod+Shift+0 move container to workspace number $ws_media
 
@@ -220,7 +218,6 @@ bindsym $mod+r mode "resize"
 # Opacity
 exec /usr/share/sway/scripts/inactive-windows-transparency.py --opacity 0.8
 
-
 # Gaps
 gaps top 2
 gaps bottom 2
@@ -231,6 +228,7 @@ gaps inner 2
 # auto tiling
 #exec ~/.config/i3/scripts/column-layout.py
 
+# keyboard & touchpad
 input type:keyboard {
     repeat_delay 300
     repeat_rate 50
@@ -242,7 +240,7 @@ input type:touchpad {
     pointer_accel 1
 }
 
-
+# sway-session
 exec_always "systemctl --user import-environment; systemctl --user start sway-session.target"
 
 exec nm-applet --indicator
@@ -251,7 +249,6 @@ exec fcitx5 -d
 
 for_window [app_id="pavucontrol"] floating enable
 for_window [app_id="org.fcitx.fcitx5-config-qt"] floating enable
-
 for_window [class="Nextcloud"] floating enable
 exec nextcloud --background
 for_window [class="Enpass"] {
@@ -272,7 +269,8 @@ exec thunderbird
 assign [class="zoom"] workspace $ws_sub
 exec blueman-applet
 for_window [app_id="blueman-manager"] floating enable
-
+for_window [class="Steam"] floating enable
+assign [class="Steam"] workspace $ws_game
 for_window [class="Google-chrome" title="YouTube Music"] move container to workspace number $ws_media
 
 bar {
